--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "npx env-cmd -f ./config/prod.env node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "npx env-cmd -f ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,6 +18,7 @@
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "env-cmd": "^10.0.1",
     "graphql-cli": "^3.0.14",
